--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,10 @@
 machine:
   ruby:
-    version: 2.0.0-p645
+    version: 2.3.0
 
   environment:
     IMPORT_PATH: "github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"
-    PKR_VERSION: 0.9.0
+    PKR_VERSION: 0.10.1
     PKR_URL: https://releases.hashicorp.com/packer/${PKR_VERSION}/packer_${PKR_VERSION}_linux_amd64.zip
 
 dependencies:
