Updating go releaser to exclude arm64 for freebsd
* arm64 for freebsd is not needed for the provsioner. .

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,6 +15,9 @@ builds:
       - arm
       - arm64
       - 386
+    ignore:
+      - goos: freebsd
+        goarch: arm64
     env:
       - CGO_ENABLED=0
 
