Upgrade to Go 1.18
Latest is Go 1.20, but packer uses Go 1.18
https://github.com/hashicorp/packer/blob/v1.8.5/go.mod#L267

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ executors:
     working_directory: ~/packer-provisioner-serverspec
   golang:
     docker:
-      - image: circleci/golang:1.13.12
+      - image: cimg/go:1.18
     working_directory: ~/packer-provisioner-serverspec
     environment:
       ALPINE_VERSION: '3.10'
