Upgrade to ruby 3.2 on CI
net-ssh requires Ruby 2.6+

```
ERROR:  Error installing serverspec:
	The last version of net-ssh (>= 2.7) to support your Ruby & RubyGems was 6.1.0. Try installing it with `gem install net-ssh -v 6.1.0` and then running the current command again
	net-ssh requires Ruby version >= 2.6. The current ruby version is 2.5.5.157.
```

https://app.circleci.com/pipelines/github/sue445/packer-provisioner-serverspec/7/workflows/be813b17-1cdb-402c-a4f2-911fd4462846/jobs/35

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ executors:
       ALPINE_VERSION: '3.10'
   ruby:
     docker:
-      - image: circleci/ruby:2.5.5
+      - image: cimg/ruby:3.2
     working_directory: ~/packer-provisioner-serverspec
     environment:
       PACKER_VERSION: '1.8.5'
