--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
             wget -q "https://releases.hashicorp.com/packer/${PACKER_VERSION}/packer_${PACKER_VERSION}_SHA256SUMS"
             wget -q "https://releases.hashicorp.com/packer/${PACKER_VERSION}/packer_${PACKER_VERSION}_SHA256SUMS.sig"
             gpg --batch --verify packer_${PACKER_VERSION}_SHA256SUMS.sig packer_${PACKER_VERSION}_SHA256SUMS
-            mkdir ~/bin
+            mkdir -p ~/bin
             unzip -d ~/bin packer_${PACKER_VERSION}_linux_amd64.zip
             cp -p /tmp/workspace/packer-provisioner-serverspec ~/bin/packer-provisioner-serverspec
       - run:
